testcases/error/invalid_modport_item.veryl
interface invalid_modport_item {
    var a: logic;
    modport m {
        a: import,
    }
}
